increase spacing between inputs and labels; add arkhamDB link

--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,10 @@ input {
     margin-left: 10px;
 }
 
+input[type=number] {
+    width: 3em;
+}
+
 .row {
-    padding-bottom: 10px;
+    padding-bottom: .7em;
 }
